feat: :sparkles: implement`active` property to `Button` component
- update associated unit tests
- update associated `Storybook`
- add associated styles to component variants

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/button/_fill.scss
+++ b/src/lib/scss/components/button/_fill.scss
@@ -7,6 +7,16 @@
 				fill: hsl(var(--base-font));
 			}
 		}
+		&.active {
+			border-color: hsl(var(--dark));
+			background-color: hsl(var(--dark));
+			color: hsl(var(--dark-font));
+			:global {
+				path {
+					fill: hsl(var(--dark-font));
+				}
+			}
+		}
 		@include action-focus {
 			background-color: hsl(var(--natural));
 			color: hsl(var(--natural-font));
