--- a/src/lib/scss/components/link/_base.scss
+++ b/src/lib/scss/components/link/_base.scss
@@ -55,7 +55,7 @@ $base-paddingY: 0;
 		}
 
 		@include action-focus {
-			outline-color: hsl(var(--natural));
+			outline-color: hsl(var(--light) / 20%);
 		}
 
 		@include action-hover {
