style: :lipstick: add `truncate` property to `Link` component
- add associated styles
- update `truncate` scss mxin
- update component unit tests
- update associated `Storybook`

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/link/_base.scss
+++ b/src/lib/scss/components/link/_base.scss
@@ -101,5 +101,11 @@ $base-paddingY: 0;
 				transform: translate3d(0, -2px, 0);
 			}
 		}
+		&.truncate {
+			@include truncate(100%);
+			& > span {
+				@include truncate;
+			}
+		}
 	}
 }
