--- a/src/lib/scss/components/title/_base.scss
+++ b/src/lib/scss/components/title/_base.scss
@@ -8,11 +8,14 @@ $base-fontSize: 0.9rem;
 @mixin Title-base {
 	& {
 		padding: $base-paddingY $base-paddingX;
-		color: hsl(var(--natural-font));
+		color: hsl(var(--base));
 		text-transform: uppercase;
 		margin: $base-marginY $base-marginX;
 		margin-bottom: math.div($base-marginY, 3);
 		font-size: $base-fontSize;
 		@include truncate(calc(100% - 2rem));
+		&.muted {
+			color: hsl(var(--base) / 50%);
+		}
 	}
 }
