fix(patch): :bug: fix `Backdrop` not covering viewport effectively
- tweak `z-index` of components with `position: absolute | fixed`

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/drawer/_base.scss
+++ b/src/lib/scss/components/drawer/_base.scss
@@ -38,6 +38,7 @@ $base-paddingY: $paddingY * 2;
 			border-width: $base-borderWidth;
 			border-style: solid;
 			border-color: transparent;
+			z-index: 10;
 			&.expanded {
 				transform: scale(1);
 			}
