--- a/src/lib/scss/components/backdrop/_base.scss
+++ b/src/lib/scss/components/backdrop/_base.scss
@@ -17,6 +17,7 @@ $icon-marginX: 0.125rem;
 		height: 100%;
 		top: 0;
 		right: 0;
+		z-index: 5;
 		&:not(.transparent) {
 			background-color: hsl(var(--darker) / 50%);
 		}
