--- a/src/lib/scss/components/sidemenu/_base.scss
+++ b/src/lib/scss/components/sidemenu/_base.scss
@@ -43,6 +43,7 @@ $base-paddingY: $paddingY * 2;
 		&.fixed {
 			position: fixed;
 			left: 0;
+			z-index: 100;
 			@include rtl-bundle('Sidemenu') {
 				&.rtl {
 					left: unset;
