fix: :lipstick: `Link` component should wrap if it has a long content
Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/link/_base.scss
+++ b/src/lib/scss/components/link/_base.scss
@@ -12,7 +12,7 @@ $base-paddingY: 0;
 		box-sizing: border-box;
 		cursor: pointer;
 		position: relative;
-		white-space: nowrap;
+		// white-space: nowrap;
 		color: hsl(var(--base));
 		border-radius: $base-borderRadius;
 		display: inline-flex;
